Updated theme and added rails asset pipline post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
             <ul class="nav">
               <li><a class="extra" href="/">home</a></li>
               <li><a class="extra" href="/">posts</a></li>
+              <li><a class="extra" href="/about.html">about</li>
             </ul>
             <div class="contact">
               <a href="mailto:me@caigenichols.com"><i class="fa fa-envelope"></i></a>
