Updated short description.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
             
             <a href="/">{{ site.name }}</a>
             <br>
-            <strong>DESIGN-GINEER</strong>
+            <strong>WEB CONSTRUCTINEER</strong>
             <a href="/"><img class="avatar" src="/img/caige.jpg"></a>
 
             <ul class="nav">
